--- a/bin/sudowin/sudo.exe.config
+++ b/bin/sudowin/sudo.exe.config
@@ -56,4 +56,8 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 			</channels>
 		</application>
 	</system.runtime.remoting>
+	<startup>
+		<supportedRuntime version="v2.0.50727" />
+		<supportedRuntime version="v4.0" />
+	</startup>
 </configuration>
